fix: ?ㅻ쪟/?띾룄 媛쒖꽑 - RestTemplate ??꾩븘?? N+1 ?쒓굅, API ??꾩븘?? ?몃쭏?댄듃 setState 諛⑹?
Co-authored-by: Cursor <cursoragent@cursor.com>